Version 7, je fais fonctionner les $ref qui sont durs
